--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
 								<div class="content">
 									<header class="align-center"><h2>Personal Portfolio Website</h2>
 										<p style="color: black;">My website where I will display future projects from my programming journey.</p>
-									</header><hr><ul class="actions align-center"><li><a href="https://github.com/B-D-1997/Personal-Portfolio-Site" class="button alt">Github Page</a></li>
+									</header><hr><ul class="actions align-center"><li><a href="https://https://github.com/B-D-1997/B-D-1997.github.io" class="button alt">Github Page</a></li>
 								</div>
 							</div>
 						</div>
